fix overflow bug again;
add browser prefixes

--- a/static/css/clumsy-toc.css
+++ b/static/css/clumsy-toc.css
@@ -24,7 +24,7 @@
     background: var(--white);
 	font-size: 0.8rem;
 	line-height: 1.3;
-	border: 1px solid var(--dark-grey);
+	border: 1px solid var(--light-grey);
 	overflow-x: hidden;
 	overflow-y: auto;
 }
